[gd_scene load_steps=38 format=2]

[ext_resource path="res://assets/SpriteSheets/slimeFr/LirikFR_Sprite_Sheet.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Slime.gd" type="Script" id=2]
[ext_resource path="res://assets/SpriteSheets/slimeFr/LirikFR_Shadows_Sheet.png" type="Texture" id=3]
[ext_resource path="res://src/Helpers/CustomParticles.gd" type="Script" id=4]
[ext_resource path="res://assets/SpriteSheets/hit markers/Effect 3 - Sprite Sheet.png" type="Texture" id=5]
[ext_resource path="res://src/Helpers/Spawning/LootSpawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/SpriteSheets/hit markers/hits2-Sheet.png" type="Texture" id=7]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 5
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.4
anim_speed = 1.0

[sub_resource type="CanvasItemMaterial" id=3]
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.3
anim_speed = 2.0

[sub_resource type="Animation" id=5]
length = 3.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "dispose"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Attack/AttackBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KinematicSprite/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Shadow:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36 ]
}

[sub_resource type="Animation" id=6]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicSprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15 ]
}

[sub_resource type="Animation" id=7]
length = 0.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicSprite/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=8]
length = 1.8
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.6, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_on_jump_attack"
}, {
"args": [  ],
"method": "_end_jump_attack"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicSprite/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shadow:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Attack/AttackBox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "die"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "hurt"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "jump_attack"

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=19]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=20]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=25]
states/die/node = SubResource( 9 )
states/die/position = Vector2( 567, 50 )
states/hurt/node = SubResource( 10 )
states/hurt/position = Vector2( 280, 168 )
states/idle/node = SubResource( 11 )
states/idle/position = Vector2( 265, 50 )
states/jump_attack/node = SubResource( 12 )
states/jump_attack/position = Vector2( 581, 168 )
transitions = [ "idle", "hurt", SubResource( 13 ), "hurt", "idle", SubResource( 14 ), "hurt", "die", SubResource( 15 ), "die", "hurt", SubResource( 16 ), "idle", "die", SubResource( 17 ), "die", "idle", SubResource( 18 ), "hurt", "jump_attack", SubResource( 19 ), "jump_attack", "idle", SubResource( 20 ), "idle", "jump_attack", SubResource( 21 ), "jump_attack", "die", SubResource( 22 ), "jump_attack", "hurt", SubResource( 23 ), "die", "jump_attack", SubResource( 24 ) ]
start_node = "idle"
end_node = "die"
graph_offset = Vector2( -100.741, 38 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=26]

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 9.46991, 6.66518 )

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 12.25, 4.03799 )

[sub_resource type="CircleShape2D" id=29]
radius = 16.0297

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 8.87926, 5.5252 )

[node name="Enemy" type="KinematicBody2D" groups=[
"enemy",
]]
position = Vector2( 0.122915, -0.207261 )
z_as_relative = false
collision_layer = 1024
collision_mask = 7
script = ExtResource( 2 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( -0.141861, -31.7209 )
texture = ExtResource( 3 )
hframes = 13
vframes = 4
frame = 39

[node name="KinematicSprite" type="KinematicBody2D" parent="."]

[node name="PunchHitMarkerParticles" type="Particles2D" parent="KinematicSprite"]
material = SubResource( 1 )
position = Vector2( 0.0217438, -13.5452 )
scale = Vector2( 3, 3 )
emitting = false
amount = 1
lifetime = 0.5
one_shot = true
fixed_fps = 8
process_material = SubResource( 2 )
texture = ExtResource( 5 )
script = ExtResource( 4 )

[node name="KickHitMarkerParticles" type="Particles2D" parent="KinematicSprite"]
material = SubResource( 3 )
position = Vector2( 0.239544, -8.86063 )
scale = Vector2( 3, 3 )
emitting = false
amount = 1
lifetime = 0.7
one_shot = true
fixed_fps = 10
process_material = SubResource( 4 )
texture = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="KinematicSprite"]
position = Vector2( 0.09548, -16.4612 )
z_as_relative = false
texture = ExtResource( 1 )
offset = Vector2( 0, -15 )
hframes = 13
vframes = 4
frame = 39

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 5 )
anims/hurt = SubResource( 6 )
anims/idle = SubResource( 7 )
anims/jump_attack = SubResource( 8 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 25 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 26 )

[node name="Sight" type="RayCast2D" parent="."]
visible = false
modulate = Color( 0.054902, 1, 0, 1 )
position = Vector2( 3.36215, -8.8321 )
enabled = true
cast_to = Vector2( 0, 100 )

[node name="ObstacleAvoidRaycasts" type="Node2D" parent="."]
visible = false
position = Vector2( 6.68174, 3.34087 )

[node name="ObstacleAvoidSE" type="RayCast2D" parent="ObstacleAvoidRaycasts"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 8.76684, -6.57698 )
enabled = true
cast_to = Vector2( 0, 100 )

[node name="ObstacleAvoidSW" type="RayCast2D" parent="ObstacleAvoidRaycasts"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -15.7453, -6.60723 )
enabled = true
cast_to = Vector2( 0, 100 )

[node name="ObstacleAvoidNW" type="RayCast2D" parent="ObstacleAvoidRaycasts"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -15.7096, -19.8957 )
enabled = true
cast_to = Vector2( 0, 100 )

[node name="ObstacleAvoidNE" type="RayCast2D" parent="ObstacleAvoidRaycasts"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 8.76486, -19.9292 )
enabled = true
cast_to = Vector2( 0, 100 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( -0.280321, -6.64993 )
shape = SubResource( 27 )

[node name="HurtBox" type="Area2D" parent="." groups=[
"hurtbox",
]]
visible = false
position = Vector2( 2.35411, -16.0959 )
collision_layer = 16384
collision_mask = 16

[node name="HurtBoxArea" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0.802493, 7.66745 )
shape = SubResource( 28 )

[node name="FlockBox" type="Area2D" parent="." groups=[
"enemy",
]]
visible = false
position = Vector2( 0.103554, -14.8493 )
collision_layer = 262144
collision_mask = 262144

[node name="FlockBoxArea" type="CollisionShape2D" parent="FlockBox"]
position = Vector2( 3.99241, 3.41379 )
shape = SubResource( 29 )

[node name="Attack" type="Area2D" parent="."]
modulate = Color( 0.431373, 1, 0, 1 )
position = Vector2( -0.240147, -11.7158 )
collision_layer = 4096
collision_mask = 0

[node name="AttackBox" type="CollisionShape2D" parent="Attack"]
position = Vector2( -1.77363, 6.94719 )
shape = SubResource( 30 )
disabled = true

[node name="LootDropper" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( -10.0978, -16.1869 )
scale = Vector2( 0.990515, 1 )
MaxCoins = 2
PowerupChance = 30

[node name="explosionPosition" type="Position2D" parent="."]
position = Vector2( 0.570759, -10.0806 )

[connection signal="area_entered" from="FlockBox" to="." method="_on_FlockBox_area_entered"]
[connection signal="area_exited" from="FlockBox" to="." method="_on_FlockBox_area_exited"]
[connection signal="area_entered" from="Attack" to="." method="_on_Attack_area_entered"]
